# quick_pp

./: .dockerignore  .env copy  .env.example  .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CITATION.cff  CONTRIBUTING.rst  Dockerfile  Dockerfile-psycopg  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  WEB_INTERFACE_README.md  docker-compose.yaml  init_db.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  survey_parser.py  tox.ini
.github/: ISSUE_TEMPLATE.md
api/: exceptions.py  main.py  mlflow_model_deployment.py  router.py
api/fastapi_mlflow/: applications.py
api/schemas/: lithology_hc_correction.py  lithology_ssc.py  lithology_vsh_gr.py  permeability_choo.py  permeability_others.py  porosity.py  ressum.py  saturation_a.py  saturation_archie.py  saturation_b.py  saturation_qv.py  saturation_rw.py  saturation_temp_grad.py  saturation_waxman_smits.py  saturation_ws.py
api/services/: hc_correction.py  las_handler.py  lithology.py  permeability.py  porosity.py  reservoir_summary.py  sand_silt_clay.py  saturation.py  shale.py
docker/: Dockerfile  docker-compose.yaml  init_db.py
docs/: Makefile  make.bat  requirements.txt
docs/source/: conf.py  history.rst  index.rst  installation.rst  langflow_chat.rst  modules.rst  quick_pp.fluid_type.rst  quick_pp.lithology.rst  quick_pp.machine_learning.rst  quick_pp.modelling.rst  quick_pp.permeability.rst  quick_pp.plotter.rst  quick_pp.porosity.rst  quick_pp.qaqc.rst  quick_pp.ressum.rst  quick_pp.rock_physics.rst  quick_pp.rock_type.rst  quick_pp.rst  quick_pp.saturation.rst  quick_pp.utils.rst  usage.rst
notebooks/: 01_data_handler.ipynb  02_EDA.ipynb  03_1_carbonate_lithology_porosity.ipynb  03_2_carbonate_rock_typing.ipynb  03_2_carbonate_rock_typing_fzi.ipynb  03_2_carbonate_rock_typing_r35.ipynb  03_3_carbonate_saturation.ipynb  03_3_carbonate_saturation_cuddy.ipynb  03_3_carbonate_saturation_j.ipynb  03_3_carbonate_saturation_j_fzi.ipynb  03_3_carbonate_saturation_j_r35.ipynb  03_3_carbonate_saturation_skelt.ipynb  03_3_carbonate_saturation_skelt_fzi.ipynb  03_3_carbonate_saturation_skelt_r35.ipynb  03_4_carbonate_single.ipynb  03_5_carbonate_batch.ipynb  03_6_carbonate_volume_uncertainty.ipynb  03_qpp_carb_a_rock_typing.ipynb  03_qpp_carb_a_shf.ipynb  03_qpp_carb_b_batch.ipynb  03_qpp_carb_b_single.ipynb  03_qpp_carb_batch.ipynb  03_qpp_carb_single.ipynb  03_qpp_ss_single.ipynb  03_qpp_ssc_batch.ipynb  03_qpp_ssc_single.ipynb  03_qpp_ssc_single_BEKK-1.ipynb  03_qpp_ssc_single_BEKK-2.ipynb  03_qpp_ssc_single_BEKK-5.ipynb  03_qpp_ssc_single_BEKK-8.ipynb  03_qpp_ssc_single_BRNA29.ipynb  03_qpp_ts_single.ipynb  03_quickpp.ipynb  03b_qpp_carb_batch.ipynb  03b_qpp_carb_single.ipynb  API_sand_silt_clay_examples.ipynb  README.md  X3.las  carbonate-examples.ipynb  fluid_contact-example.ipynb  (+14 more)
notebooks/data/: T1_3.las
notebooks/data/01_raw/: 36_7-3.las  HW-6.las  HW-7.las  HW-8.las  HW_core_data_all.csv  M3.las  X10_raw.las  X3.las  formation_pressure_data.csv
notebooks/data/01_raw/COSTA/: HW-10.las  HW-24.las  HW-25.las  HW-26.las  HW-27.las  HW-28.las  HW-29.las  HW-3.las  HW-30.las  HW-31.las  HW-32.las  HW-4.las  HW-5.las  HW-9.las  HW_core_data_all.csv
notebooks/data/01_raw/VOLVE/: 15-9-19-A.las  15-9-19-A_RCA.xls  15-9-19-BT2.las  15-9-19-BT2_RCA.xls  15_9-19A_Facies.xlsx  15_9-19A_RCA.xls  15_9-19BT2 Facies.xlsx  (+5 more)
notebooks/modelling/: Tutorial - Binary Classification.ipynb  Tutorial - Regression.ipynb
quick_pp/: __init__.py  cli.py  config.py  core_analysis.py  core_calibration.py  fluid_type.py  geomechanics.py  las_handler.py  lithology.py  logger.py  objects.py  permeability.py  plotter.py  plotter_well_log.py  plotter_well_log_config.py  porosity.py  qaqc.py  ressum.py  rock_type.py  saturation.py  utils.py
quick_pp/api/: main.py  mlflow_model_deployment.py  qpp_assistant.py  qpp_chainlit.py  router.py
quick_pp/api/fastapi_mlflow/: applications.py  predictors.py
quick_pp/api/qpp_assistant/: __init__.py  chat.py
quick_pp/api/schemas/: lithology_hc_correction.py  lithology_ssc.py  lithology_vsh_gr.py  permeability_others.py  saturation_archie.py  saturation_qv.py
quick_pp/api/services/: chat.py  las_handler.py  lithology.py  permeability.py  porosity.py  reservoir_summary.py  saturation.py
quick_pp/api/template/: chat_template.html  home.html
quick_pp/app/backend/: exceptions.py  main.py  mlflow_model_deployment.py  router.py
quick_pp/app/docker/: .dockerignore  .env.example  Dockerfile  backend-entrypoint.sh  docker-compose.yaml  init_db.py  init_services.sh
quick_pp/app/front_end/: index.html  package-lock.json  package.json
quick_pp/app/frontend/: components.json  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
quick_pp/database/: db_connector.py  models.py  objects.py  setup_db.sql  setup_langflow_db.sql  setup_postgresql_db.sql  setup_sqlite_db.sql
quick_pp/geophysics/: README_segy.md  segy_diagnostic.py  seismic.py
quick_pp/lithology/: __init__.py  carbonate.py  multi_mineral.py  sand_shale.py  sand_silt_clay.py  thin_beds.py
quick_pp/machine_learning/: config.py  feature_engineering.py  predict_pipeline.py  train_pipeline.py  utils.py
quick_pp/modelling/: config.py  formation_top_picking_rl.py  predict_pipeline.py  train_pipeline.py  utils.py
quick_pp/modelling/mock_data/: mock_data.parquet
quick_pp/permeability/: __init__.py  permeability.py
quick_pp/plotter/: __init__.py  cross_plots.py  plotter.py  well_log.py  well_log_config.py  well_plots.py
quick_pp/porosity/: __init__.py  porosity.py
quick_pp/qaqc/: __init__.py  qaqc.py
quick_pp/ressum/: __init__.py  ressum.py
quick_pp/rock_physics/: geomechanics.py  geophysics.py  rpm.py
quick_pp/rock_type/: __init__.py  rock_type.py
quick_pp/saturation/: __init__.py
quick_pp/tests/: test_ancillary.py
quick_pp/utils/: las_handler.py
quick_pp/web_app/: web_app.py
quick_pp/web_app/templates/: analysis.html  dashboard.html  upload.html
tests/: __init__.py  test_ancillary.py  test_quick_pp.py
(+132 files in other folders)
