[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quick-pp"
version = "0.2.86"
description = "Python package to assist in providing quick-look preliminary petrophysical estimation."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Imran Fadhil", email = "imranfadhil@gmail.com" },
]
keywords = [
    "geoscience",
    "petrophysics",
    "well log", "well plot",
    "quick_pp",
    "multi mineral",
    "rock typing",
    "saturation height function", "shf",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "Click>=7.0",
    "dtw-python",
    "fastapi",
    "loguru",
    "matplotlib==3.8.0",
    "mlflow",
    "orjson",
    "pandas",
    "psycopg2-binary",
    "ptitprince",
    "python-multipart",
    "ruptures",
    "SALib==1.5.1",
    "scikit-learn",
    "setuptools<81",
    "statsmodels",
    "welly",
]

[project.scripts]
quick_pp = "quick_pp.cli:cli"

[project.urls]
Homepage = "https://github.com/imranfadhil/quick_pp"

[tool.setuptools]
packages = ["quick_pp"]

[tool.setuptools.package-data]
quick_pp = [
    "app/frontend/build/**/*",
    "app/backend/**/*",
    "app/docker/.env",
    "app/docker/.env.example",
    "app/docker/backend-entrypoint.sh",
    "app/docker/docker-compose.yaml",
    "app/docker/Dockerfile",
    "app/docker/init_db.py",
    "database/**/*",
    "lithology/**/*",
    "machine_learning/**/*",
    "plotter/**/*", "rock_physics/**/*"
]
