[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quick-pp"
version = "0.2.102"
description = "Python package to assist in providing quick-look preliminary petrophysical estimation."
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Imran Fadhil", email = "imranfadhil@gmail.com" },
]
maintainers = [
    { name = "Imran Fadhil", email = "imranfadhil@gmail.com" },
]
keywords = [
    "geoscience",
    "petrophysics",
    "well log", "well plot",
    "quick_pp",
    "multi mineral",
    "rock typing",
    "saturation height function", "shf",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "Click>=7.0",
    "fastapi",
    "jinja2",
    "lasio",
    "loguru",
    "matplotlib==3.8.0",
    "orjson",
    "pandas",
    "plotly",
    "psycopg2-binary",
    "pydantic",
    "pydantic_core",
    "python-dotenv",
    "python-multipart",
    "requests",
    "ruptures",
    "setuptools<81",
    "sqlalchemy",
    "uvicorn",
    "wellpathpy",
    "welly",
]

[project.optional-dependencies]
dev = [
    "black>=23.0",
    "build>=0.10",
    "dtw-python",
    "fastapi-mcp",
    "mlflow",
    "mypy>=1.5",
    "pre-commit>=3.0",
    "ptitprince",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "ruff>=0.1.0",
    "SALib==1.5.1",
    "scikit-learn",
    "twine>=4.0",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "pytest-xdist>=3.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=1.3",
    "sphinx-autodoc-typehints>=1.24",
    "myst-parser>=2.0",
]
full = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "seaborn>=0.12",
    "bokeh>=3.0",
]

[project.scripts]
quick_pp = "quick_pp.cli:cli"

[project.urls]
Homepage = "https://github.com/imranfadhil/quick_pp"
Repository = "https://github.com/imranfadhil/quick_pp"
Documentation = "https://quick-pp.readthedocs.io"
"Bug Reports" = "https://github.com/imranfadhil/quick_pp/issues"
Changelog = "https://github.com/imranfadhil/quick_pp/blob/main/CHANGELOG.md"

[tool.setuptools]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
quick_pp = [
    "app/frontend/**/*",
    "app/backend/**/*",
    "app/docker/docker-compose.yaml",
    "app/docker/Dockerfile",
    "database/**/*",
    "lithology/**/*",
    "machine_learning/**/*",
    "plotter/**/*",
    "rock_physics/**/*"
]

[tool.setuptools.exclude-package-data]
quick_pp = [
    "app/frontend/node_modules",
    "app/frontend/node_modules/**/*",
    "app/frontend/.svelte-kit",
    "app/frontend/.svelte-kit/**/*"
]

# Development tools configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["quick_pp"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\\\bProtocol\\\\):",
    "@(abc\\\\.)?abstractmethod",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["B011", "B018", "S101"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "welly.*",
    "dtw.*",
    "ptitprince.*",
    "SALib.*",
    "ruptures.*",
]
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
